--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 							</colgroup>
 							<tr>
 								<td class="data">
-									<input disabled="true" value="0.00 XWP" id="data_revenue" style="width:100%" type="text"/>
+									<input disabled="true" value="0.00 TUBE" id="data_revenue" style="width:100%" type="text"/>
 								</td>
 							</tr>
 						</table>
@@ -405,7 +405,7 @@
 							</colgroup>
 							<tr>
 								<td class="data">
-									<input disabled="true" value="0.00 XWP" id="data_reward" style="width:100%" type="text"/>
+									<input disabled="true" value="0.00 TUBE" id="data_reward" style="width:100%" type="text"/>
 								</td>
 							</tr>
 						</table>
@@ -449,7 +449,7 @@
 
 			<div id="tabhelp" class="tabcontent">
 				<div id="help">
-					<h1>Welcome to Swap Micropool!</h1>
+					<h1>Welcome to Bittube Micropool!</h1>
 					<div id="myDIV">
 					<i class="fas fa-broadcast-tower fa-lg fa-fw"></i>&ensp;Default Presets (Mainnet):&ensp;
 					<button class="btn" onclick="setNodePreset('localmainnet')">Local Node&ensp;<i class="fas fa-map-marker-alt"></i></button>
@@ -477,7 +477,7 @@
 			function updateData() { 
 			
 				if( (document.getElementById('daemonport').value < 1024)||(document.getElementById('daemonport').value > 65535))
-					document.getElementById('daemonport').value=19950;
+					document.getElementById('daemonport').value=25182;
 				if( (document.getElementById('poolport').value < 1024)||(document.getElementById('poolport').value > 65535))
 					document.getElementById('poolport').value=14650;
 				if( (document.getElementById('ctrlport').value < 1024)||(document.getElementById('ctrlport').value > 65535))
@@ -516,12 +516,12 @@
 				if (type == "localmainnet")
 				{
 					document.getElementById('daemonhost').value="127.0.0.1";
-					document.getElementById('daemonport').value=19950;
+					document.getElementById('daemonport').value=25182;
 				}
 				else if (type == "remotemainnet")
 				{
-					document.getElementById('daemonhost').value="autonode.xwp.fyi";
-					document.getElementById('daemonport').value=19950;
+					document.getElementById('daemonhost').value="";
+					document.getElementById('daemonport').value=25182;
 				}
 				document.getElementById('poolport').value=14650;
 				document.getElementById('ctrlport').value=14651;
