fix profit calculator sometime not showing

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 				{
 					if (currency == "TUBE" || exchangeRate == 1 )
 					{
-						document.getElementById(arg[0]).innerHTML=arg[1].toFixed(2)+' TUBE';
+						document.getElementById(arg[0]).innerHTML=arg[1]+' TUBE';
 					}
 					else
 					{
