--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<div class="logo"><img src="resources/logo/bittube_logo.png" alt="Bittube Micropool" style="height:30px;"></div>
 						</th>
 						<th colspan="2">
-							<div class="toplinks"><a href="https://coin.bit.tube" target="_blank">Website</a><a href="https://github.com/ipbc-dev" target="_blank">Github</a><a href="https://explorer.bit.tube" target="_blank">Explorer</a><a href="https://github.com/ipbc-dev" target="_blank">Paper Wallet</a></div>
+							<div class="toplinks"><a href="https://bittube.cash/" target="_blank">Website</a><a href="https://github.com/BitTubeCash" target="_blank">Github</a><a href="https://explorer.bit.tube" target="_blank">Explorer</a><a href="wallet.html" target="_blank">Paper Wallet</a></div>
 						</th>
 					</tr>
 					<tr class="dashboard">
