update placeholder text

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 			<div id="tablog" class="tabcontent">
 				<div id="log">
 				</div>
-				<input id="daemon_command_input" placeholder=">Enter daemon command" onkeydown="handle_daemon_command(this)" type="text"/>
+				<input id="daemon_command_input" placeholder="Daemon CLI>" onkeydown="handle_daemon_command(this)" type="text"/>
 			</div>
 
 			<div id="tabworker" class="tabcontent">
