--- a/index.html
+++ b/index.html
@@ -601,10 +601,10 @@
 					<p>
 						<ol>
 							<li>
-								Install Micropool-Miner on any rig located on the same network as micropool.
+								Install Micropool-Miner for rigs located on the same network as micropool.
 							</li>
 							<li>
-								Set the username and password as preferred. These are used to identify mining rigs within the micropool.
+								Set the username as preferred. This will be used to identify your mining rig.
 								<ul>
 									<li>Optionally, append a number prefixed by a dot after the username (e.g. workername.10) to set the share difficulty for the rig.
 									Difficulty defaults to 1 when left unset. As a general guideline setting the difficulty 1:1 with your miners graphrate will yield approximately 1 share every 40 seconds.</li>
